@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-	<herd>games</herd>
+  <maintainer>
+    <email>poncho@spahan.ch</email>
+    <name>Poncho</name>
+  </maintainer>
 </pkgmetadata>
