@@ -1,10 +1,10 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/games-misc/papers-please/papers-please-1.1.65.ebuild,v 1.2 2014/06/18 19:20:47 mgorny Exp $
+# $Header: $
 
 EAPI=5
 
-inherit eutils games
+inherit eutils gnome2-utils games
 
 DESCRIPTION="A Dystopian Document Thriller"
 HOMEPAGE="http://papersplea.se"
@@ -19,25 +19,21 @@ RESTRICT="fetch bindist"
 QA_PREBUILT="${GAMES_PREFIX_OPT#/}/${PN}/*"
 
 RDEPEND="
-	amd64? (
-		>=x11-libs/libX11-1.6.2[abi_x86_32]
-		>=x11-libs/libXau-1.0.7-r1[abi_x86_32]
-		>=x11-libs/libXdmcp-1.1.1-r1[abi_x86_32]
-		>=x11-libs/libXext-1.3.2[abi_x86_32]
-		>=x11-libs/libXxf86vm-1.1.3[abi_x86_32]
-		>=x11-libs/libdrm-2.4.46[abi_x86_32]
-		>=x11-libs/libxcb-1.9.1[abi_x86_32]
-		>=virtual/opengl-7.0-r1[abi_x86_32]
-	)
-	x86? (
-		x11-libs/libX11
-		x11-libs/libXau
-		x11-libs/libXdmcp
-		x11-libs/libXext
-		x11-libs/libXxf86vm
-		x11-libs/libdrm
-		x11-libs/libxcb
-		virtual/opengl
+	|| (
+		(
+			x11-libs/libX11[abi_x86_32(-)]
+			x11-libs/libXau[abi_x86_32(-)]
+			x11-libs/libXdmcp[abi_x86_32(-)]
+			x11-libs/libXext[abi_x86_32(-)]
+			x11-libs/libXxf86vm[abi_x86_32(-)]
+			x11-libs/libdrm[abi_x86_32(-)]
+			x11-libs/libxcb[abi_x86_32(-)]
+			virtual/opengl[abi_x86_32(-)]
+		)
+		amd64? (
+			app-emulation/emul-linux-x86-opengl[-abi_x86_32(-)]
+			app-emulation/emul-linux-x86-xlibs[-abi_x86_32(-)]
+		)
 	)"
 
 S=${WORKDIR}/${PN}
@@ -62,10 +58,26 @@ src_install() {
 	doins -r *
 	fperms +x "${dir}"/PapersPlease
 
+	newicon -s 256 "${FILESDIR}/papers_please___icon_by_chrisjahim-d6to4j4.png" ${PN}.png
+
 	games_make_wrapper ${PN} "./PapersPlease" "${dir}" "${dir}"
 	make_desktop_entry ${PN} "Papers, Please"
 
 	dodoc "${T}"/README
 
 	prepgamesdirs
+}
+
+pkg_preinst() {
+	games_pkg_preinst
+	gnome2_icon_savelist
+}
+
+pkg_postinst() {
+	games_pkg_postinst
+	gnome2_icon_cache_update
+}
+
+pkg_postrm() {
+	gnome2_icon_cache_update
 }
